--- a/MVVMMapDiagram/DiagramDesigner/Resources/StyleItems/EdgeStyle.xaml
+++ b/MVVMMapDiagram/DiagramDesigner/Resources/StyleItems/EdgeStyle.xaml
@@ -1,54 +1,50 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DiagramDesigner.Resources.StyleItems"
                     xmlns:s="clr-namespace:DiagramDesigner"
                     xmlns:c="clr-namespace:DiagramDesigner.Controls">
     
-    <Style x:Key="edgeStyle"
-                            TargetType="{x:Type ContentPresenter}">
-                        <Setter Property="Width"
-                                Value="{Binding Area.Width}" />
-                        <Setter Property="Height"
-                                Value="{Binding Area.Height}" />
-                        <Setter Property="Canvas.Top"
-                                Value="{Binding Area.Top}" />
-                        <Setter Property="Canvas.Left"
-                                Value="{Binding Area.Left}" />
-                        <Setter Property="s:SelectionProps.EnabledForSelection"
-                                Value="True" />
-                        <Setter Property="ContentTemplate">
-                            <Setter.Value>
-                                <DataTemplate>
-                                    <Canvas Background="AliceBlue"
-                                            x:Name="selectedGrid">
+    <Style x:Key="connectorItemStyle"
+           TargetType="{x:Type ContentPresenter}">
+        <Setter Property="Width"
+           Value="{Binding Area.Width}" />
+        <Setter Property="Height"
+            Value="{Binding Area.Height}" />
+        <Setter Property="Canvas.Top"
+             Value="{Binding Area.Top}" />
+        <Setter Property="Canvas.Left"
+            Value="{Binding Area.Left}" />
+        <Setter Property="s:SelectionProps.EnabledForSelection"
+              Value="True" />
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
 
-                        <ItemsControl ItemsSource="{Binding Path=Items}"  MinWidth="{Binding Path=Width}"
-                                      Canvas.Top="{Binding Top}" Canvas.Left="{Binding Left}" ClipToBounds="False"
-                                      ItemContainerStyleSelector="{x:Static s:DesignerItemsControlItemStyleSelector.Instance}"
-                                                DataContext="{Binding Path=DataContext,
-                                                RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Canvas}}}">
-                            <ItemsControl.RenderTransform>
-                                <RotateTransform Angle="{Binding Path=Angle}"/>
-                            </ItemsControl.RenderTransform>
-                        </ItemsControl>
+                <DataTemplate>
+                    <Canvas>
 
-                                        
-                        <Polyline x:Name="poly"
-                                    Stroke="Gray"
-                                    Points="{Binding Path=ConnectionPoints, Converter={x:Static s:ConnectionPathConverter.Instance}}"
-                                    StrokeThickness="2" />
-                        </Canvas>
-                    <DataTemplate.Triggers>
-                        <DataTrigger Value="True"
-                                        Binding="{Binding IsSelected}">
-                            <Setter TargetName="poly"
-                                    Property="Stroke"
-                                    Value="Black" />
-                            </DataTrigger>
-                    </DataTemplate.Triggers>
+                        <!--SupporPaneltSegment="{Binding Path=DataContext.Segment, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged,
+                                                RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Canvas}}}"-->
+                        <c:RoundedCornersPolygon x:Name="PART_Connector"
+                                                Stroke="Black"
+                                                StrokeThickness="1"
+                                                UseRoundnessPercentage="True"
+                                                Fill="Transparent"
+                                                ConfinesPoints="{Binding Path=ConnectionPoints, 
+                                                                        Converter={x:Static s:ConnectionPathConverter.Instance}}"                                                             
+                                                Visibility="{Binding Path=VisibilityEdge, 
+                                                                        Converter={x:Static s:BoolToVisibilityConverter.Instance}}">
+
+                            <!--<i:Interaction.Triggers>
+                                <i:EventTrigger EventName="UpSegment">
+                                    <g:EventToCommand Command="{Binding Path=GeneralSegmentCommand}"
+                                                                          CommandParameter="{Binding ElementName=PART_Connector, Path=SegmentLinked}"></g:EventToCommand>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>-->
+                        </c:RoundedCornersPolygon>
+
+                    </Canvas>
+
                 </DataTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-    
 </ResourceDictionary>
