--- a/MVVMMapDiagram/DiagramDesigner/Resources/StyleItems/NodeStyle.xaml
+++ b/MVVMMapDiagram/DiagramDesigner/Resources/StyleItems/NodeStyle.xaml
@@ -1,15 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:DiagramDesigner.Resources.StyleItems"
                     xmlns:s="clr-namespace:DiagramDesigner"
                     xmlns:c="clr-namespace:DiagramDesigner.Controls">
-    
-    <Style x:Key="trioConnectStyle">
 
-    </Style>
-    
-    <Style x:Key="twoConnectStyle"
-        TargetType="{x:Type ContentPresenter}">
+    <Style x:Key="designerItemStyle"
+                                TargetType="{x:Type ContentPresenter}">
         <Setter Property="Canvas.Top"
                                     Value="{Binding Top}" />
         <Setter Property="Canvas.Left"
@@ -19,99 +14,56 @@
         <Setter Property="s:ItemConnectProps.EnabledForConnection"
                                     Value="True" />
         <Setter Property="Width"
-                Value="{x:Static  s:DesignerItemViewModelBase.ItemWidth}" /> <!--<!!!!>-->
+                                    Value="{Binding ItemWidth}" />
         <Setter Property="Height"
-                Value="{x:Static  s:DesignerItemViewModelBase.ItemHeight}" /> <!--<!!!!>-->
+                                    Value="{Binding ItemHeight}" />
         <Setter Property="SnapsToDevicePixels"
                                     Value="True" />
+        <Setter Property="ClipToBounds"
+                Value="False"/>
         <Setter Property="ContentTemplate">
             <Setter.Value>
                 <DataTemplate>
                     <Grid x:Name="selectedGrid">
-                        <c:DragThumb x:Name="PART_DragThumb"
+                   
+                        <Grid>
+                            <Grid.RenderTransform>
+                                <RotateTransform Angle="{Binding Angle}" 
+                                                 CenterX="{Binding CenterX}"
+                                                 CenterY="{Binding CenterY}"/>
+                            </Grid.RenderTransform>
+                            
+                                 <c:DragThumb x:Name="PART_DragThumb" Background="Transparent"
                                                             Cursor="SizeAll" />
-                        <ContentPresenter x:Name="PART_ContentPresenter"
-                                            HorizontalAlignment="Stretch"
-                                            VerticalAlignment="Stretch"
-                                            Content="{TemplateBinding Content}" />
-                        
-                            <Grid Margin="-5"
-                                        x:Name="PART_ConnectorDecorator">
-                                <s:Connector DataContext="{Binding LeftConnector}"
-                                            Orientation="Left"
-                                            VerticalAlignment="Center"
-                                            HorizontalAlignment="Left"
-                                            Visibility="{Binding Path=ShowConnectors, 
-                                                    Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
-                                <s:Connector DataContext="{Binding RightConnector}"
-                                            Orientation="Right"
-                                            VerticalAlignment="Center"
-                                            HorizontalAlignment="Right"
-                                            Visibility="{Binding Path=ShowConnectors, 
-                                                    Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
-                        </Grid>
-                    </Grid>
-                    <DataTemplate.Triggers>
-                        <Trigger Property="IsMouseOver"
-                                                        Value="true">
-                            <Setter TargetName="PART_ConnectorDecorator"
-                                                        Property="Visibility"
-                                                        Value="Visible" />
-                        </Trigger>
-
-                        <DataTrigger Value="True"
-                                Binding="{Binding RelativeSource={RelativeSource Self},Path=IsDragConnectionOver}">
-                            <Setter TargetName="PART_ConnectorDecorator"
-                                                    Property="Visibility"
-                                                    Value="Visible" />
-                        </DataTrigger>
-
-                        <DataTrigger Value="True"
-                                   Binding="{Binding IsSelected}">
-                            <Setter TargetName="selectedGrid"
-                                     Property="Effect">
-                                <Setter.Value>
-                                    <DropShadowEffect BlurRadius="30"
-                                                    ShadowDepth="0"
-                                                    Color="Black"
-                                                    Opacity="1.0" />
-                                </Setter.Value>
-                            </Setter>
-                        </DataTrigger>
-                    </DataTemplate.Triggers>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-    
-    <Style x:Key="fourConnectStyle"
-                TargetType="{x:Type ContentPresenter}">
-            <Setter Property="Canvas.Top"
-                                    Value="{Binding Top}" />
-            <Setter Property="Canvas.Left"
-                                    Value="{Binding Left}" />
-            <Setter Property="s:SelectionProps.EnabledForSelection"
-                                    Value="True" />
-            <Setter Property="s:ItemConnectProps.EnabledForConnection"
-                                    Value="True" />
-            <Setter Property="Width"
-                                    Value="{x:Static  s:DesignerItemViewModelBase.ItemWidth}" />
-            <Setter Property="Height"
-                                    Value="{x:Static  s:DesignerItemViewModelBase.ItemHeight}" />
-            <Setter Property="SnapsToDevicePixels"
-                                    Value="True" />
-            <Setter Property="ContentTemplate">
-                <Setter.Value>
-                    <DataTemplate>
-                        <Grid x:Name="selectedGrid">
-                            <c:DragThumb x:Name="PART_DragThumb"
-                                                            Cursor="SizeAll" />
+                            
                             <ContentPresenter x:Name="PART_ContentPresenter"
                                                                 HorizontalAlignment="Stretch"
                                                                 VerticalAlignment="Stretch"
                                                                 Content="{TemplateBinding Content}" />
-                            <Grid Margin="-5"
-                                                    x:Name="PART_ConnectorDecorator">
+
+                            <!--<c:ResizeThumb Margin="-5" VerticalAlignment="Top"
+                                                HorizontalAlignment="Left"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Top"
+                                                HorizontalAlignment="Right"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Bottom"
+                                                HorizontalAlignment="Left"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Bottom"
+                                                HorizontalAlignment="Right"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />-->
+
+
+                            <Grid x:Name="PART_ConnectorDecorator">
+
                                 <s:Connector DataContext="{Binding LeftConnector}"
                                                                 Orientation="Left"
                                                                 VerticalAlignment="Center"
@@ -134,40 +86,153 @@
                                                                 Visibility="{Binding Path=ShowConnectors, Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
                             </Grid>
                         </Grid>
-                        <DataTemplate.Triggers>
-                            <Trigger Property="IsMouseOver"
-                                                        Value="true">
-                                <Setter TargetName="PART_ConnectorDecorator"
+
+
+                        
+                    </Grid>
+
+                    <DataTemplate.Triggers>
+                        <Trigger Property="IsMouseOver"
+                                          Value="true">
+                            <Setter TargetName="PART_ConnectorDecorator"
+                                        Property="Visibility"
+                                        Value="Visible" />
+                        </Trigger>
+
+                        <DataTrigger Value="True"
+                             Binding="{Binding RelativeSource={RelativeSource Self},Path=IsDragConnectionOver}">
+                            <Setter TargetName="PART_ConnectorDecorator"
                                                         Property="Visibility"
                                                         Value="Visible" />
-                            </Trigger>
+                        </DataTrigger>
 
-                            <DataTrigger Value="True"
-                                Binding="{Binding RelativeSource={RelativeSource Self},Path=IsDragConnectionOver}">
-                                <Setter TargetName="PART_ConnectorDecorator"
-                                                    Property="Visibility"
-                                                    Value="Visible" />
-                            </DataTrigger>
-
-                            <DataTrigger Value="True"
-                                   Binding="{Binding IsSelected}">
-                                <Setter TargetName="selectedGrid"
-                                     Property="Effect">
-                                    <Setter.Value>
-                                        <DropShadowEffect BlurRadius="30"
+                        <DataTrigger Value="True"
+                                     Binding="{Binding IsSelected}">
+                            <Setter TargetName="selectedGrid"
+                                    Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect BlurRadius="30"
                                                     ShadowDepth="0"
                                                     Color="Black"
                                                     Opacity="1.0" />
-                                    </Setter.Value>
-                                </Setter>
-                            </DataTrigger>
-                        </DataTemplate.Triggers>
-                    </DataTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
- 
 
+    <Style x:Key="interNodeItemStyle"
+         TargetType="{x:Type ContentPresenter}">
+        <Setter Property="Canvas.Top"
+        Value="{Binding Top}" />
+        <Setter Property="Canvas.Left"
+                                   Value="{Binding Left}" />
+        <Setter Property="s:SelectionProps.EnabledForSelection"
+          Value="True" />
+        <Setter Property="s:ItemConnectProps.EnabledForConnection"
+          Value="True" />
+        <Setter Property="Width"
+          Value="{Binding ItemWidth}" />
+        <Setter Property="Height"
+          Value="{Binding ItemHeight}" />
+        <Setter Property="SnapsToDevicePixels"
+          Value="True" />
+        <Setter Property="ContentTemplate">
+            <Setter.Value>
+                <DataTemplate>
+                    <Grid x:Name="selectedGrid">
+                        <c:DragThumb x:Name="PART_DragThumb"
+                                                            Cursor="SizeAll" />
+                        <Grid>
+                            <Grid.RenderTransform>
+                                <RotateTransform Angle="{Binding Path=Angle}" 
+                                                 CenterX="{Binding Path=CenterX}" 
+                                                 CenterY="{Binding Path=CenterY}">
+                                    
+                                </RotateTransform>
+                            </Grid.RenderTransform>
+                            
+                            <ContentPresenter x:Name="PART_ContentPresenter"
+                               HorizontalAlignment="Stretch"
+                               VerticalAlignment="Stretch"
+                               Content="{TemplateBinding Content}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Top"
+                                                HorizontalAlignment="Left"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Top"
+                                                HorizontalAlignment="Right"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Bottom"
+                                                HorizontalAlignment="Left"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <c:ResizeThumb Margin="-5" VerticalAlignment="Bottom"
+                                                HorizontalAlignment="Right"
+                                                Visibility="{Binding Path=IsSelected, 
+                                                Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+
+                            <Grid Margin="-5"
+                            x:Name="PART_ConnectorDecorator">
+                                <s:Connector DataContext="{Binding LeftConnector}"
+                               Orientation="Left"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Left"
+                               Visibility="{Binding Path=ShowConnectors, Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+                                <s:Connector DataContext="{Binding RightConnector}"
+                               Orientation="Right"
+                               VerticalAlignment="Center"
+                               HorizontalAlignment="Right"
+                               Visibility="{Binding Path=ShowConnectors, Converter={x:Static s:BoolToVisibilityConverter.Instance}}" />
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                    <DataTemplate.Triggers>
+                        <Trigger Property="IsMouseOver"
+                       Value="true">
+                            <Setter TargetName="PART_ConnectorDecorator"
+                       Property="Visibility"
+                       Value="Visible" />
+                        </Trigger>
+                        
+                        
+
+                        <DataTrigger Value="True"
+                           Binding="{Binding RelativeSource={RelativeSource Self},Path=IsDragConnectionOver}">
+                            <Setter TargetName="PART_ConnectorDecorator"
+                       Property="Visibility"
+                       Value="Visible" />
+                        </DataTrigger>
+
+           
+
+                        <DataTrigger Value="True"
+                           Binding="{Binding IsSelected}">
+                            <Setter TargetName="selectedGrid"
+                                  Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect BlurRadius="30"
+                                          ShadowDepth="0"
+                                          Color="Black"
+                                          Opacity="1.0" />
+                                </Setter.Value>
+                            </Setter>
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
+                    
+                    
+                </DataTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 
 </ResourceDictionary>
