--- a/MVVMMapDiagram/DiagramDesigner/Resources/Styles/DesignerItems.xaml
+++ b/MVVMMapDiagram/DiagramDesigner/Resources/Styles/DesignerItems.xaml
@@ -35,19 +35,15 @@
                      TargetType="{x:Type Control}">
         <Grid Margin="-5">
             <s:Connector x:Name="Left"
-                         Orientation="Left"
                          VerticalAlignment="Center"
                          HorizontalAlignment="Left" />
             <s:Connector x:Name="Top"
-                         Orientation="Top"
                          VerticalAlignment="Top"
                          HorizontalAlignment="Center" />
             <s:Connector x:Name="Right"
-                         Orientation="Right"
                          VerticalAlignment="Center"
                          HorizontalAlignment="Right" />
             <s:Connector x:Name="Bottom"
-                         Orientation="Bottom"
                          VerticalAlignment="Bottom"
                          HorizontalAlignment="Center" />
         </Grid>
@@ -65,5 +61,30 @@
         </Setter>
     </Style>
 
+    <!--<Style TargetType="{x:Type s:ResizeThumb}">
+        <Setter Property="Width"
+    Value="8" />
+        <Setter Property="Height"
+    Value="8" />
+        <Setter Property="Cursor"
+    Value="Cross" />
+        <Setter Property="SnapsToDevicePixels"
+    Value="true" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type s:ResizeThumb}">
+                    <Grid>
+                        --><!-- transparent extra space makes ResizeThumb easier to hit --><!--
+                        <Rectangle Fill="Transparent"
+                        Margin="-2" />
+                        <Rectangle Fill="Lavender"
+                        StrokeThickness="1"
+                        Stroke="#AA000080" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>-->
 
+    
 </ResourceDictionary>
