--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupTemplate.xaml
@@ -4,7 +4,7 @@
 
 
     <!-- DataTemplate for DesignerCanvas look and feel -->
-    <DataTemplate DataType="{x:Type local:LineGroupItemViewModel}">
+    <DataTemplate DataType="{x:Type local:LineGItemViewModel}">
 
         <Button HorizontalAlignment="Right"
                     VerticalAlignment="Bottom"
