--- a/MVVMMapDiagram/DiagramDesigner/Resources/Styles/DesignerItems.xaml
+++ b/MVVMMapDiagram/DiagramDesigner/Resources/Styles/DesignerItems.xaml
@@ -61,7 +61,7 @@
         </Setter>
     </Style>
 
-    <!--<Style TargetType="{x:Type s:ResizeThumb}">
+    <Style TargetType="{x:Type c:ResizeThumb}">
         <Setter Property="Width"
     Value="8" />
         <Setter Property="Height"
@@ -72,9 +72,9 @@
     Value="true" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type s:ResizeThumb}">
+                <ControlTemplate TargetType="{x:Type c:ResizeThumb}">
                     <Grid>
-                        --><!-- transparent extra space makes ResizeThumb easier to hit --><!--
+                         <!--transparent extra space makes ResizeThumb easier to hit--> 
                         <Rectangle Fill="Transparent"
                         Margin="-2" />
                         <Rectangle Fill="Lavender"
@@ -84,7 +84,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
 
     
 </ResourceDictionary>
