--- a/MVVMMapDiagram/DemoApp/App.xaml
+++ b/MVVMMapDiagram/DemoApp/App.xaml
@@ -1,28 +1,47 @@
-﻿<Application x:Class="DemoApp.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Window1.xaml">
-    <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-
-                <!-- DiagramDesigner Dll resources, you need all of these -->
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/Shared.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ScrollBar.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/Expander.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/GroupBox.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ToolTip.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ScrollViewer.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ZoomBox.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/DesignerItems.xaml" />
-
-                <!-- Common DemoApp Styles -->
-                <ResourceDictionary Source="Resources/Styles.xaml" />
-
-                <!-- specific designer items, you should have one of these per ViewModel that you want to represent on diagram -->
-                <ResourceDictionary Source="Resources/DesignerItems/SettingsDesignerItemDataTemplate.xaml" />
-                <ResourceDictionary Source="Resources/DesignerItems/PersistDesignerItemDataTemplate.xaml" />
-            </ResourceDictionary.MergedDictionaries>
+﻿<Application x:Class="DemoApp.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="Window1.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <!--  DiagramDesigner Dll resources, you need all of these  -->
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/Shared.xaml">
         </ResourceDictionary>
-    </Application.Resources>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ScrollBar.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/Expander.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/GroupBox.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/ToolTip.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/Styles/DesignerItems.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/ConnectorItemStyle.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="pack://application:,,,/DiagramDesigner;component/Resources/DesignerStyle.xaml">
+        </ResourceDictionary>
+        <!--  Common DemoApp Styles  -->
+        <ResourceDictionary Source="Resources/Styles.xaml">
+        </ResourceDictionary>
+        <!--  specific designer items, you should have one of these per ViewModel that you want to represent on diagram  -->
+        <ResourceDictionary Source="Resources/DesignerItems/SettingsDesignerItemDataTemplate.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="Resources/DesignerItems/PersistDesignerItemDataTemplate.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="Resources/DesignerItems/InternalNodeItemDataTemplate.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="Resources/DesignerItems/LaneItemDataTemplate.xaml">
+        </ResourceDictionary>
+        <ResourceDictionary Source="Resources/DesignerItems/LineGroupItemDataTemplate.xaml">
+        </ResourceDictionary>
+                <ResourceDictionary Source="Resources/DesignerItems/ODConnectorItemDataTemplate.xaml">
+                </ResourceDictionary>
+                <ResourceDictionary Source="Resources/DesignerItems/TrafficLightIItemDataTemplate.xaml">
+                </ResourceDictionary>
+      
+      
+      </ResourceDictionary.MergedDictionaries>
+        
+
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
