--- a/MVVMMapDiagram/DiagramDesigner/UserControls/DiagramControl.xaml
+++ b/MVVMMapDiagram/DiagramDesigner/UserControls/DiagramControl.xaml
@@ -1,55 +1,62 @@
-﻿<UserControl x:Class="DiagramDesigner.DiagramControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-             xmlns:g="http://www.galasoft.ch/mvvmlight"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:s="clr-namespace:DiagramDesigner"
-             xmlns:c="clr-namespace:DiagramDesigner.Controls"
-             xmlns:map="clr-namespace:GCityDoor.MapControl;assembly=GCityDors.MapControl"
-             xmlns:gmap="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
-             mc:Ignorable="d"     x:Name="win"     
-             d:DesignHeight="300" d:DesignWidth="300">
+﻿<UserControl
+    x:Class="DiagramDesigner.DiagramControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:c="clr-namespace:DiagramDesigner.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:g="http://www.galasoft.ch/mvvmlight"
+    xmlns:gmap="clr-namespace:GMap.NET.WindowsPresentation;assembly=GMap.NET.WindowsPresentation"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    xmlns:map="clr-namespace:GCityDoor.MapControl;assembly=GCityDors.MapControl"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:s="clr-namespace:DiagramDesigner"
+    x:Name="win"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
 
-    <Border BorderBrush="LightGray"
-            BorderThickness="1">
+    <Border BorderBrush="LightGray" BorderThickness="1">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <map:MapCanvas Name="map" Mode="Mouse" Visibility="Visible"
-                           MinZoom="{Binding ElementName=zoomBorder, Path=MinZoom}"
-                           Zoom="{Binding ElementName=zoomBorder, Path=Zoom, Mode=OneWay,
-                                    UpdateSourceTrigger=PropertyChanged}"/>
+            <map:MapCanvas
+                Name="map"
+                MinZoom="{Binding ElementName=zoomBorder, Path=MinZoom}"
+                Mode="Mouse"
+                Visibility="Visible"
+                Zoom="{Binding ElementName=zoomBorder, Path=Zoom, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
-            <s:ZoomBorder x:Name="zoomBorder" AutoFitMode="Fill" ZoomSpeed="2" ClipToBounds="True"
-                            VerticalAlignment="Stretch" 
-                            HorizontalAlignment="Stretch"
-                            MouseRightButtonDown="zoomBorder_MouseRightButtonDown"
-                            MouseRightButtonUp="zoomBorder_MouseRightButtonUp"
-                            MouseWheel="zoom_MouseWheel"
-                            MouseMove="MouseMoveAll"
-                            Zoom="16"
-                            MinZoom="5"
-                            MaxZoom="18"
-                            AllowDrop="True">
+            <s:ZoomBorder
+                x:Name="zoomBorder"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                AllowDrop="True"
+                AutoFitMode="Fill"
+                ClipToBounds="True"
+                MaxZoom="18"
+                MinZoom="5"
+                MouseMove="MouseMoveAll"
+                MouseRightButtonDown="zoomBorder_MouseRightButtonDown"
+                MouseRightButtonUp="zoomBorder_MouseRightButtonUp"
+                MouseWheel="zoom_MouseWheel"
+                Zoom="16"
+                ZoomSpeed="2">
 
-                <ItemsControl ItemsSource="{Binding Items}"
-                                ItemContainerStyleSelector="{x:Static s:DesignerItemsControlItemStyleSelector.Instance}">
+                <ItemsControl ItemContainerStyleSelector="{x:Static s:DesignerItemsControlItemStyleSelector.Instance}" ItemsSource="{Binding Items}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <s:DesignerCanvas Loaded="DesignerCanvas_Loaded"
-                                                  MinHeight="1800"
-                                                  MinWidth="1800"
-                                                  Background="Transparent"
-                                                  HorizontalAlignment="Left"
-                                                  VerticalAlignment="Top"
-                                                  AllowDrop="True">
-                            </s:DesignerCanvas>
+                            <s:DesignerCanvas
+                                MinWidth="1800"
+                                MinHeight="1800"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Top"
+                                AllowDrop="True"
+                                Background="Transparent"
+                                Loaded="DesignerCanvas_Loaded" />
                         </ItemsPanelTemplate>
                     </ItemsControl.ItemsPanel>
                 </ItemsControl>
@@ -57,24 +64,40 @@
 
 
 
-            <Grid Grid.Row="3" HorizontalAlignment="Right" Background="#FFCF5B41">
+            <Grid
+                Grid.Row="3"
+                HorizontalAlignment="Right"
+                Background="#FFCF5B41">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
                 </Grid.ColumnDefinitions>
 
 
-                <TextBlock Grid.Column="0" Text="ZoomNet: " Background="#FF57E849" Width="55"></TextBlock>
-                <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                       Text="{Binding ElementName=zoomBorder, Path=Zoom, UpdateSourceTrigger=PropertyChanged}"
-                       Width="60" Background="#FF57E849"></TextBlock>
+                <TextBlock
+                    Grid.Column="0"
+                    Width="55"
+                    Background="#FF57E849"
+                    Text="ZoomNet: " />
+                <TextBlock
+                    Grid.Column="1"
+                    Width="60"
+                    HorizontalAlignment="Center"
+                    Background="#FF57E849"
+                    Text="{Binding ElementName=zoomBorder, Path=Zoom, UpdateSourceTrigger=PropertyChanged}" />
 
-                <TextBlock Grid.Column="2" Text="ZoomMap: " Background="#FFFFB97F" Width="60"></TextBlock>
-                <TextBlock Grid.Column="3" 
-                       Text="{Binding ElementName=map, Path=Zoom, UpdateSourceTrigger=PropertyChanged}" 
-                       Width="50" Background="#FFFFB97F"></TextBlock>
+                <TextBlock
+                    Grid.Column="2"
+                    Width="60"
+                    Background="#FFFFB97F"
+                    Text="ZoomMap: " />
+                <TextBlock
+                    Grid.Column="3"
+                    Width="50"
+                    Background="#FFFFB97F"
+                    Text="{Binding ElementName=map, Path=Zoom, UpdateSourceTrigger=PropertyChanged}" />
             </Grid>
         </Grid>
     </Border>
