--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/SettingsDesignerItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/SettingsDesignerItemDataTemplate.xaml
@@ -7,7 +7,7 @@
             <Grid>
             <Image IsHitTestVisible="False"
                     Stretch="Fill"
-                    Source="../../Images/Setting.png"
+                    Source="../../Images/internalNodePanel.png"
                     Tag="setting" />
           
             <Button HorizontalAlignment="Right" 
