--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/LineGroupItemDataTemplate.xaml
@@ -8,7 +8,8 @@
         <Grid>
             <Image IsHitTestVisible="False"
                    Stretch="Fill"
-                   Source="../../Images/Persist.png"
+                   Source="../../Images/lineGroupPanel.png"
+                   Opacity="0.6"
                    Tag="setting" />
             
             <Button HorizontalAlignment="Right" Content="HostUrl"
