--- a/MVVMMapDiagram/DemoApp/Resources/DesignerItems/TrafficLightIItemDataTemplate.xaml
+++ b/MVVMMapDiagram/DemoApp/Resources/DesignerItems/TrafficLightIItemDataTemplate.xaml
@@ -2,45 +2,56 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="clr-namespace:DiagramDesigner.Controls;assembly=DiagramDesigner"
+    xmlns:cmd="http://www.galasoft.ch/mvvmlight"
     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:cmd="clr-namespace:GalaSoft.MvvmLight;assembly=GalaSoft.MvvmLight"
     xmlns:local="clr-namespace:DemoApp"
     xmlns:poly="clr-namespace:DiagramDesigner.Controls;assembly=DiagramDesigner">
 
     <!--  DataTemplate for DesignerCanvas look and feel  -->
     <DataTemplate DataType="{x:Type local:TrafficLightIItemViewModel}">
-        <Grid>
 
-            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-           
-                <poly:RoundedCornersPolygon
-                    x:Name="polygon"
-                    ConfinesPoints="{Binding Points}"
-                    Fill="Firebrick"
-                    IsHitTestVisible="False"
-                    RenderTransformOrigin="0.5,1"
-                    Stroke="Black" Opacity="0.6"
-                    StrokeThickness="1"
-                    TypeShape="Polygon"
-                    VisibilityCorner="False" />
+        <ContentControl x:Name="control">
+            <Grid>
+                <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+
+                    <!--  IsHitTestVisible=""  -->
+                    <poly:RoundedCornersPolygon
+                        x:Name="polygon"
+                        ConfinesPoints="{Binding Points}"
+                        Fill="Black"
+                        IsHitTestVisible="False"
+                        Opacity="0.3"
+                        RenderTransformOrigin="0.5,1"
+                        Stroke="Black"
+                        StrokeThickness="1"
+                        TypeShape="Polygon"
+                        VisibilityCorner="False"/>
+
+                </Grid>
+
+                <Button
+                    Margin="5"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    Command="{Binding ShowDataChangeWindowCommand}"
+                    Content="HostUrl"
+                    Template="{StaticResource infoButtonTemplate}" />
+
                 <i:Interaction.Triggers>
-                    
+                    <i:EventTrigger EventName="MouseDoubleClick" SourceName="control">
+                        <cmd:EventToCommand Command="{Binding EditPolygon}" />
+                    </i:EventTrigger>
                 </i:Interaction.Triggers>
             </Grid>
+        </ContentControl>
 
-            <Button
-                Margin="5"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Command="{Binding ShowDataChangeWindowCommand}"
-                Content="HostUrl"
-                Template="{StaticResource infoButtonTemplate}" />
-        </Grid>
-        
+
         <DataTemplate.Triggers>
+
             <DataTrigger Binding="{Binding IsSelected}" Value="True">
                 <Setter TargetName="polygon" Property="VisibilityCorner" Value="true" />
             </DataTrigger>
+            <EventTrigger RoutedEvent="MouseMove" />
         </DataTemplate.Triggers>
     </DataTemplate>
 
